#34: fixed code smells

--- a/EmployeestWeb/Views/Authorization/SignIn.cshtml
+++ b/EmployeestWeb/Views/Authorization/SignIn.cshtml
@@ -6,7 +6,7 @@
 <style>
     .section {
         color: #5A5A5A;
-        font-family: Arial;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         margin: 5% 40%;
         font-size: 14px;
     }
