--- a/EmployeestWeb/Views/Home/Home.cshtml
+++ b/EmployeestWeb/Views/Home/Home.cshtml
@@ -6,7 +6,7 @@
     .section {
         padding: 8% 20px 0;
         color: #5A5A5A;
-        font-family: Arial;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
     .title {
         font-size: 50px;
@@ -53,8 +53,8 @@
     <h2 class="title">Best CRM system in Ukraine</h2>
     <p class="abbreviation"><span>C</span>ustomer <span>R</span>elationship <span>M</span>anagement</p>
     <h3>Feel the opportunity</h3>
-    <nav class="navigationItem">
-        <a asp-area="" asp-controller="Authorization" asp-action="SignUp">Try in now</a>
+    <nav class="navigationItem" aria-label="SignUp link">
+        <a asp-area="" asp-controller="Authorization" asp-action="Authorization link1">Try in now</a>
     </nav>
 </div>
 <div class="section">
@@ -78,7 +78,7 @@
         Employeest is designed to be user-friendly. After registering, you can create your customer base, add your products or services, and manage your sales pipeline. 
         The platform provides tools such as contact management, sales forecasting, and marketing automation.
     </p>
-    <nav class="navigationItem">
+    <nav class="navigationItem" aria-label="Authorization link2">
         <a asp-area="" asp-controller="Authorization" asp-action="SignUp">Try in now</a>
     </nav>
 </div>
