--- a/EmployeestWeb/Views/Task/Index.cshtml
+++ b/EmployeestWeb/Views/Task/Index.cshtml
@@ -32,7 +32,7 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.UserId)
+                    @Html.DisplayFor(modelItem => item.User!.FullName)
                 </td>
                 <td>
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
