#58: fixed some issues

--- a/EmployeestWeb/Views/Owner/Workers.cshtml
+++ b/EmployeestWeb/Views/Owner/Workers.cshtml
@@ -65,7 +65,7 @@
                     </button>
                 </td>
             </tr>
-            <tr class="table-body">
+            <tr class="table-body" aria-label="employees-table">
                 <td class="user">
                     <img
                         class="user-avatar"
