--- a/EmployeestWeb/Views/Shared/_Layout.cshtml
+++ b/EmployeestWeb/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                     </button>
                     <div class="user-info">
                         <div class="user-content">
-                            <div class="user-name">User Name</div>
+                            <div class="user-name">@ViewData["UserName"]</div>
                             <div class="user-position">Employee</div>
                         </div>
                         <button class="user-avatar-button">
